; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkey_register_frontend.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkey_register_frontend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBS_INVALID_HOTKEY_ID = common dso_local global i32 0, align 4
@OBS_HOTKEY_REGISTERER_FRONTEND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @obs_hotkey_register_frontend(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %11 = call i32 (...) @lock()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %4
  %14 = load i32, i32* @OBS_INVALID_HOTKEY_ID, align 4
  store i32 %14, i32* %5, align 4
  br label %24

15:                                               ; preds = %4
  %16 = load i32, i32* @OBS_HOTKEY_REGISTERER_FRONTEND, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @obs_hotkey_register_internal(i32 %16, i32* null, i32* null, i8* %17, i8* %18, i32 %19, i8* %20)
  store i32 %21, i32* %10, align 4
  %22 = call i32 (...) @unlock()
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @lock(...) #1

declare dso_local i32 @obs_hotkey_register_internal(i32, i32*, i32*, i8*, i8*, i32, i8*) #1

declare dso_local i32 @unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
